# CARS

./: .gitignore  README.md  pyproject.toml
.cars/: delivery.md  manifest.json
.github/workflows/: cars-ars-gate.yml  cars-benchmark.yml  cars-correctness.yml
cars_eval/: __init__.py  evaluate.py
docs/: app-plan.md  metric.md
scripts/: run_cars_ci.py  run_pr_ars_ci.py
src/cars_returns/: __init__.py  __main__.py  app.py  auth.py  db.py  models.py  repository.py  seed.py  service.py  templates.py
src/cars_store/: __init__.py  pricing.py
tasks/cart-discount/: task.json
tasks/cart-discount/submissions/bad/: delivery.md  manifest.json  pricing.py
tasks/cart-discount/submissions/good/: delivery.md  manifest.json  pricing.py
tasks/ci-ars-workflow-split/: task.json
tasks/returns-bulk-approve/: task.json
tasks/returns-manager-approval/: task.json
tasks/returns-partial-refund/: task.json
tasks/returns-state-transition/: task.json
tests/: helpers.py
tests/acceptance/: test_cart_discount.py  test_returns_workflow.py
tests/regression/: test_pricing_regressions.py  test_returns_http.py  test_returns_regressions.py
