[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cars-eval-demo"
version = "0.1.0"
description = "Demo repository for CARS: Correctness, Alignment, Reviewability, and Safety."
requires-python = ">=3.10"

[project.scripts]
cars-returns = "cars_returns.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
